--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY='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'
+OPENAI_API_KEY=
 OPENWEATHER_API_KEY='262e530647fee627dffc87addb7444df'
 EXCHANGERATE_API_KEY='984769ed257fd5c8d4d74659'
